--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ OLLAMA_HOST=http://host.docker.internal:11434
 APP_EMBEDDING_MODEL=nomic-embed-text:latest
 
 # Gemini (Google AI Studio)
-GOOGLE_API_KEY=AIzaSyBrbHN9A6FP65H5_luoXCPpO0w72vC0kWI
+GOOGLE_API_KEY=[ADD_YOUR_API_KEY_HERE]
 APP_GEMINI_MODEL=gemini-1.5-pro
 
 # App
