--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ APP_GEMINI_MODEL=[models_generate_content]
 APP_RELOAD=false
 APP_TOP_K=5
 APP_MIN_SCORE=0.3
+
+# Thêm vào cuối file .env
+
+APP_TABLE_SCHEMAS_JSON=[{"schema":"public","table":"assembly_list_data","description":"KHÔNG PHẢI BÁO CÁO VỀ MÀU SƠN. Bảng này chỉ chứa thông tin KỸ THUẬT VẬT LÝ của sản phẩm/assembly như: kích thước (dimensions), trọng lượng (weight), loại vật liệu kim loại (material type: gold, silver, platinum), loại đá gắn vào sản phẩm (stone type: diamond, ruby), kích cỡ đá. KHÔNG có thông tin về màu sơn, mã màu, công thức sơn.","columns":"id, assembly_name, material_type, stone_type, dimensions, weight, product_code","keywords":"vật liệu, đá, kim loại, kích thước, trọng lượng, dimensions, weight, stone, material"},{"schema":"public","table":"bom_son_data","description":"Bảng CHUYÊN về MÀU SƠN và BOM sơn. Chứa đầy đủ: tên màu sơn (color_name), mã màu chuẩn (color_code), loại sơn (paint_type: matte, glossy, metallic), công thức pha màu chi tiết (formula), thành phần hóa học (components), tỷ lệ phối trộn. Dùng KHI VÀ CHỈ KHI người dùng hỏi về: màu, sơn, color, paint, mã màu, công thức màu, pha màu.","columns":"id, product_code, color_name, color_code, paint_type, components, formula","keywords":"màu, sơn, color, paint, mã màu, công thức, pha màu, color code, paint formula"}]
+
