--- a/test-embedding/test2/requirements.txt
+++ b/test-embedding/test2/requirements.txt
@@ -1,9 +1,13 @@
 python-dotenv 
 psycopg2-binary 
-google-generativeai 
 requests 
 tiktoken
 transformers 
 torch
-sshtunnel
-paramiko<3.0.0
+paramiko==3.4.0 
+sshtunnel==0.4.0 
+cryptography==41.0.7
+fastapi
+google.generativeai
+pandas
+openpyxl
