--- a/service-vector-api-main/requirements.txt
+++ b/service-vector-api-main/requirements.txt
@@ -5,3 +5,6 @@ requests==2.32.3
 fastapi==0.115.5
 uvicorn==0.32.0
 tenacity>=8.2.0,<9.0.0
+paramiko==3.4.0 
+sshtunnel==0.4.0 
+cryptography==41.0.7
